--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -26,8 +26,5 @@ $code-icon-width: 1.75rem !default;
 
 /* fonts */
 
-$font-family-main: 'Nanum Gothic', sans-serif !default;
-$font-family-headings: 'Nanum Gothic', sans-serif !default;
-$font-size: 1em;
-/* $font-family-base: 'Source Sans Pro', 'Microsoft Yahei', sans-serif !default;
-$font-family-heading: Lato, 'Microsoft Yahei', sans-serif !default;*/
+$font-family-base: 'Source Sans Pro', 'Microsoft Yahei', sans-serif !default;
+$font-family-heading: Lato, 'Microsoft Yahei', sans-serif !default;
