--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,6 +8,7 @@
           {% include media-url.html src=site.avatar %}
         {%- endcapture -%}
         <img src="{{- avatar_url -}}" width="112" height="112" alt="avatar" onerror="this.style.display='none'">
+        <a href="https://myhits.vercel.app"><img src="https://myhits.vercel.app/api/hit/https%3A%2F%2Fmyhits.vercel.app?color=blue&label=hits&size=small" alt="hits" /></a>
       {%- endif -%}
     </a>
 
