--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,32 +2,33 @@
 
 <footer
   aria-label="Site Info"
-  class="
-    d-flex flex-column justify-content-center text-muted
-    flex-lg-row justify-content-lg-between align-items-lg-center pb-lg-3
-  "
+  class="d-flex flex-column justify-content-center text-muted flex-lg-row justify-content-lg-between align-items-lg-center pb-lg-3"
 >
   <p>
     {{- '©' }}
     <time>{{ 'now' | date: '%Y' }}</time>
 
     {% if site.social.links %}
-      <a href="{{ site.social.links[0] }}">{{ site.social.name }}</a>.
-    {% else %}
-      <em class="fst-normal">{{ site.social.name }}</em>.
-    {% endif %}
-
-    {% if site.data.locales[include.lang].copyright.brief %}
-      <span
-        data-bs-toggle="tooltip"
-        data-bs-placement="top"
-        title="{{ site.data.locales[include.lang].copyright.verbose }}"
-      >
-        {{- site.data.locales[include.lang].copyright.brief -}}
-      </span>
+    <a href="{{ site.social.links[0] }}">{{ site.social.name }}</a>. {% else %}
+    <em class="fst-normal">{{ site.social.name }}</em>. {% endif %} {% if
+    site.data.locales[include.lang].copyright.brief %}
+    <span
+      data-bs-toggle="tooltip"
+      data-bs-placement="top"
+      title="{{ site.data.locales[include.lang].copyright.verbose }}"
+    >
+      {{- site.data.locales[include.lang].copyright.brief -}}
+    </span>
     {% endif %}
   </p>
-<!--
+  <p>
+    <a href="https://myhits.vercel.app"
+      ><img
+        src="https://myhits.vercel.app/api/hit/https%3A%2F%2Fmyhits.vercel.app?color=blue&label=hits&size=small"
+        alt="hits"
+    /></a>
+  </p>
+  <!--
   <p>
     {%- capture _platform -%}
       <a href="https://jekyllrb.com" target="_blank" rel="noopener">Jekyll</a>
@@ -46,5 +47,4 @@
 
     {{ site.data.locales[include.lang].meta | replace: ':PLATFORM', _platform | replace: ':THEME', _theme }}
   </p>
--->
-</footer>
+--></footer>
