--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
   <p>
     <a href="https://myhits.vercel.app"
       ><img
-        src="https://myhits.vercel.app/api/hit/https%3A%2F%2Fmyhits.vercel.app?color=blue&label=hits&size=small"
+        src="https://myhits.vercel.app/api/hit/https%3A%2F%2Fkosaf1996.github.io?color=blue&label=hits&size=small"
         alt="hits"
     /></a>
   </p>
